Update env file

--- a/MERN-OPENAI-CHATBOT/backend/.env
+++ b/MERN-OPENAI-CHATBOT/backend/.env
@@ -1,7 +1,7 @@
-OPEN_AI_SECRET=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
-OPENAI_ORGANIZATION_ID = org-mMTc1JJg4oahiBG4Flyri9Mm
-MONGODB_URL=mongodb+srv://roja:WtgsBRPb0rFusV9G@cluster0.p0bqg6e.mongodb.net/chatbot?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=wertyuio74sdfghjkoiuy
-COOKIE_SECRET=qwertyuiopsdfghj852sdfghjk
-PORT= 5000
+OPEN_AI_SECRET=
+OPENAI_ORGANIZATION_ID = 
+MONGODB_URL=
+JWT_SECRET=
+COOKIE_SECRET=
+PORT= 
 
